--- a/src/App.sass
+++ b/src/App.sass
@@ -31,5 +31,32 @@
   &__item
     margin-bottom: 25px
 
+  &__link
+    text-decoration: none
+    color: white
+
 .menuClose
   display: none
+
+.auth-wrapper
+  display: flex
+
+.auth-img
+  width: 14px
+  margin-left: 7px
+
+.authMenuOpen
+  position: absolute
+  right: 0
+  top: 60px
+  width: 277px
+  background-color: #17E3B2
+  padding: 34px 42px
+
+.authMenu__item
+  font-size: 12px
+  color: white
+  text-decoration: none
+
+  &:not(:last-child)
+    margin-bottom: 22px
