--- a/src/App.sass
+++ b/src/App.sass
@@ -58,5 +58,23 @@
   color: white
   text-decoration: none
 
-  &:not(:last-child)
-    margin-bottom: 22px
+.authMenu__li:not(:last-child)
+  margin-bottom: 22px
+
+.auth-avatar
+  height: 25px
+  width: 25px
+  border: 1px solid #7A7A7A
+  border-radius: 50% 50%
+  font-size: 12px
+  color: #7A7A7A
+  background-color: #FBF10A
+  display: flex
+  align-items: center
+  justify-content: center
+  margin-right: 8px
+
+.auth-name
+  font-size: 12px
+  color: white
+  align-self: center
