--- a/src/style/_Menu.sass
+++ b/src/style/_Menu.sass
@@ -1,7 +1,7 @@
 .menu
-  width: 300px
+  width: 252px
   height: calc(100vh - 80px)
-  padding: 0 24px
+  // padding: 0 24px
   font-size: 14px
 
   &__item
