--- a/src/style/App.css
+++ b/src/style/App.css
@@ -11,6 +11,7 @@
   background-size: cover;
   height: 100vh;
   background-color: #eff1f7;
+  padding: 0 26px;
 }
 
 .App-header {
@@ -24,7 +25,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 0 26px;
+  padding-left: 18px;
 }
 
 .App-header__lGroup {
@@ -77,14 +78,20 @@
   display: flex;
 }
 
+.main-block__right {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  margin-left: 24px;
+}
+
 .text-center {
   text-align: center;
 }
 
 .menu {
-  width: 300px;
+  width: 252px;
   height: calc(100vh - 80px);
-  padding: 0 24px;
   font-size: 14px;
 }
 
@@ -199,5 +206,102 @@
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
+}
+
+.table-container {
+  background-color: white;
+  height: calc(100vh - 80px - 88px);
+  -webkit-box-shadow: 0px 8px 24px rgba(69, 69, 69, 0.06);
+          box-shadow: 0px 8px 24px rgba(69, 69, 69, 0.06);
+  border-radius: 16px;
+}
+
+table {
+  width: 100%;
+  font-size: 12px;
+}
+
+thead {
+  font-weight: 700;
+  color: #B8C7CC;
+}
+
+td {
+  border-bottom: 1px solid #EDEDED;
+  height: 48px;
+}
+
+.lock-img {
+  width: 72px;
+  text-align: center;
+}
+
+.trash-img {
+  width: 72px;
+}
+
+.head-fio {
+  min-width: 200px;
+}
+
+.head-login, .head-rol {
+  min-width: 140px;
+}
+
+.filter-container {
+  height: 80px;
+  padding: 24px 24px 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 16px;
+}
+
+.filter-input {
+  -ms-flex-preferred-size: 317px;
+      flex-basis: 317px;
+  background-color: #F6F8F8;
+  outline: none;
+  border: none;
+  border-radius: 12px;
+  padding: 0 19px 0 52px;
+  font-size: 12px;
+  background-image: url("../img/search.svg");
+  background-repeat: no-repeat;
+  background-position: 16px 50%;
+}
+
+.filter-select {
+  background-color: #F6F8F8;
+  outline: none;
+  border: none;
+  border-radius: 12px;
+  padding: 0 16px;
+  font-size: 12px;
+  width: 100%;
+  height: 100%;
+  color: #797F8F;
+}
+
+.filter-select__mg {
+  padding-right: 11px;
+  -ms-flex-preferred-size: 230px;
+      flex-basis: 230px;
+  background-color: #F6F8F8;
+  border-radius: 12px;
+}
+
+.filter-btn {
+  width: 67px;
+  color: #FA6400;
+  background-color: white;
+  border: none;
+}
+
+.pagination-container {
+  height: 88px;
 }
 /*# sourceMappingURL=App.css.map */
