--- a/src/style/App.sass
+++ b/src/style/App.sass
@@ -1,9 +1,14 @@
+@import variables
+
 *
   margin: 0
   padding: 0
   box-sizing: border-box
   list-style: none
   // font-family: Roboto
+  
+::-webkit-scrollbar
+  width: 0
 
 .App-main
   background-image: url('../img/main-background.png')
@@ -61,3 +66,4 @@
 @import Table
 @import Filter
 @import Pagination
+@import TableItem
