--- a/src/style/_Filter.sass
+++ b/src/style/_Filter.sass
@@ -25,9 +25,10 @@
   border-radius: 12px
   padding: 0 16px
   font-size: 12px
-  // background-image: url('../img/select-arrow.svg')
-  // background-repeat: no-repeat
-  // background-position: 100px 50%
+  appearance: none
+  background-image: url('../img/select-arrow.svg')
+  background-repeat: no-repeat
+  background-position: right 50%
   width: 100%
   height: 100%
   color: #797F8F
@@ -43,6 +44,6 @@
 
 .filter-btn
   width: 67px
-  color: #FA6400
+  color: $primaryColor
   background-color: white
   border: none
