--- a/src/style/_Menu.sass
+++ b/src/style/_Menu.sass
@@ -1,7 +1,6 @@
 .menu
   width: 252px
   height: calc(100vh - 80px)
-  // padding: 0 24px
   font-size: 14px
 
   &__item
@@ -18,7 +17,7 @@
       background-color: #F6F8F8
       box-shadow: 0px 8px 32px rgba(69, 69, 69, 0.06)
       cursor: pointer
-      color: #FA6400
+      color: $primaryColor
 
     &:hover .menu__img
       filter: grayscale(0)
