--- a/src/style/_Menu.sass
+++ b/src/style/_Menu.sass
@@ -22,6 +22,19 @@
     &:hover .menu__img
       filter: grayscale(0)
 
+    &_hover
+      border-radius: 16px
+      background-color: #F6F8F8
+      box-shadow: 0px 8px 32px rgba(69, 69, 69, 0.06)
+      cursor: pointer
+      color: $primaryColor
+      margin-bottom: 25px
+      height: 56px
+      display: flex
+      align-items: center
+      padding-left: 24px
+      text-decoration: none
+
   &__img
     width: 24px
     margin-right: 16px
