--- a/src/style/_Menu.sass
+++ b/src/style/_Menu.sass
@@ -35,6 +35,9 @@
       padding-left: 24px
       text-decoration: none
 
+      & .menu__img
+        filter: grayscale(0)
+
   &__img
     width: 24px
     margin-right: 16px
