--- a/src/style/App.css
+++ b/src/style/App.css
@@ -509,4 +509,35 @@ td {
   padding: 4px 0;
   z-index: 1;
 }
+
+.link {
+  text-decoration: none;
+}
+
+.card-container {
+  max-width: 787px;
+  height: 526px;
+  background-color: white;
+  -webkit-box-shadow: 0px 10px 40px rgba(83, 100, 120, 0.15);
+          box-shadow: 0px 10px 40px rgba(83, 100, 120, 0.15);
+  border-radius: 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 32px 40px;
+}
+
+.card-btn {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+}
+
+.card-left-block {
+  width: 191px;
+}
+
+.card-form {
+  width: 371px;
+  margin-left: 32px;
+}
 /*# sourceMappingURL=App.css.map */
