--- a/src/style/_UserCard.sass
+++ b/src/style/_UserCard.sass
@@ -9,6 +9,12 @@
 
 .card-btn
   align-self: flex-end
+  width: 108px
+  height: 40px
+  background: linear-gradient(74.6deg, #FF8901 0%, #FF3E3B 100%)
+  border-radius: 4px
+  border: none
+  color: white
 
 .card-left-block
   width: 191px
@@ -16,3 +22,105 @@
 .card-form
   width: 371px
   margin-left: 32px
+  display: flex
+  flex-direction: column
+
+  &__name
+    max-width: 157px
+    font-size: 14px
+    font-weight: 700
+    margin-bottom: 24px
+
+  &__label
+    font-size: 14px
+    color: #797F8F
+    padding-left: 16px
+
+  &__input
+    height: 40px
+    width: 100%
+    font-size: 14px
+    background: rgba(217, 227, 232, 0.5)
+    border-radius: 12px
+    border: none
+    padding: 0 16px
+    margin: 8px 0 24px
+    outline: none
+
+  &__select
+    appearance: none
+    background-image: url('../img/caret-down-fill.svg')
+    background-repeat: no-repeat
+    background-position-y: 50%
+    background-position-x: 345px
+
+  &__input-mini
+    width: 203px
+    height: 32px
+    background: rgba(217, 227, 232, 0.5)
+    border-radius: 8px 0 0 8px
+    border: none
+    outline: none
+    // margin: 8px 0 24px
+    padding-left: 16px
+
+.unput-mini-group
+  display: flex
+  margin: 8px 0 24px
+
+.btn-mini
+  border: none
+  display: flex
+  justify-content: center
+  align-items: center
+  width: 32px
+  border-radius: 0 8px 8px 0
+
+.btn-plus
+  display: flex
+  justify-content: center
+  align-items: center
+  margin-left: 8px
+  border: none
+  background-color: transparent
+
+.access-block
+  display: flex
+
+.access-text
+  font-size: 14px
+  color: #B8C7CC
+  margin-left: 18px
+
+.image-conmainer
+  height: 250px
+  display: flex
+  justify-content: center
+  align-items: center
+  border-radius: 16px
+  background-color: #D9DBDD
+
+.image
+  width: 70%
+
+.btn
+  margin-top: 16px
+  width: 100%
+  height: 40px
+  font-size: 14px
+  font-weight: 600
+  border-radius: 4px
+  border: none
+
+  &__reset
+    background-color: #262D38
+    color: white
+
+  &__delete
+    background-color: transparent
+    color: $primaryColor
+
+.change-log
+  margin-top: 76px
+  font-size: 12px
+  color: #B8C7CC
