--- a/src/style/App.sass
+++ b/src/style/App.sass
@@ -38,15 +38,26 @@
 
   &__title
     font-size: 16px
-    margin-left: 156px
 
 .link_flex
   display: inline-flex
+
+  &_hide
+    display: none
 
 .App-name
   font-weight: bold
   font-size: 18px
   margin-left: 16px
+  margin-right: 156px
+
+.arrow-btn
+  margin-right: 16px
+  background-color: transparent
+  border: none
+
+  &_hide
+    display: none
 
 .logo
   width: 30px
