--- a/src/style/_UserCard.sass
+++ b/src/style/_UserCard.sass
@@ -15,6 +15,10 @@
   border-radius: 4px
   border: none
   color: white
+  cursor: pointer
+
+  &:hover
+    filter: opacity(.7)
 
 .card-left-block
   width: 191px
@@ -53,6 +57,7 @@
     background-repeat: no-repeat
     background-position-y: 50%
     background-position-x: 345px
+    cursor: pointer
 
   &__input-mini
     width: 203px
@@ -61,7 +66,6 @@
     border-radius: 8px 0 0 8px
     border: none
     outline: none
-    // margin: 8px 0 24px
     padding-left: 16px
 
 .unput-mini-group
@@ -75,6 +79,7 @@
   align-items: center
   width: 32px
   border-radius: 0 8px 8px 0
+  cursor: pointer
 
 .btn-plus
   display: flex
@@ -83,6 +88,7 @@
   margin-left: 8px
   border: none
   background-color: transparent
+  cursor: pointer
 
 .access-block
   display: flex
@@ -111,14 +117,21 @@
   font-weight: 600
   border-radius: 4px
   border: none
+  cursor: pointer
 
   &__reset
     background-color: #262D38
     color: white
+    
+    &:hover
+      background-color: lighten(#262D38, 20%)
 
   &__delete
     background-color: transparent
     color: $primaryColor
+
+    &:hover
+      background-color: darken(white, 10%)
 
 .change-log
   margin-top: 76px
