--- a/src/style/App.css
+++ b/src/style/App.css
@@ -433,6 +433,24 @@ td {
   color: #888888;
 }
 
+.page_no-hover {
+  width: 33px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 35px;
+  border-radius: 8px;
+  font-size: 14px;
+  font-weight: 700;
+  color: #888888;
+}
+
 .page:hover {
   background-color: #F6F8F8;
   -webkit-box-shadow: 0px 8px 24px rgba(69, 69, 69, 0.06);
