--- a/src/style/_Pagination.sass
+++ b/src/style/_Pagination.sass
@@ -39,18 +39,7 @@
   font-weight: 700
   color: #888888
 
-  &_no-hover
-    width: 33px
-    display: flex
-    justify-content: center
-    align-items: center
-    height: 35px
-    border-radius: 8px
-    font-size: 14px
-    font-weight: 700
-    color: #888888
-
-  &:hover
+  &:not(.page_no-hover):hover
     background-color: #F6F8F8
     box-shadow: 0px 8px 24px rgba(69, 69, 69, 0.06)
     cursor: pointer
